Fix issue where website was overflowing empty space

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ div.row-container {
 }
 
 body {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
